fix: add left align text

--- a/packages/core/src/components/text/text.css
+++ b/packages/core/src/components/text/text.css
@@ -20,6 +20,10 @@
     line-height: var(--text-line-height-small, var(--hggs-line-height-sm-default));
   }
 
+  &.hggs-text--align-left {
+    text-align: left;
+  }
+
   &.hggs-text--align-center {
     text-align: center;
   }
